
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SIZE ;
 int checkstatus (int ) ;
 int cmdbuf ;
 int memset (int ,int ,int ) ;
 int printf (char*,char*) ;
 int readbuf (int *,int ,int ,int ) ;
 int sendbuf (int ,int ,int) ;
 int sockfd ;
 int sprintf (int ,char*,char*,char*) ;
 int srvbuf ;
 int storfile (char*,int,int) ;
 char* storstr ;

void storbuf(char *filename,char *buf,int size,int port)
{
    int j;

    printf("[+] STOR file %s\n",filename);
    memset(cmdbuf,0,SIZE);
    j=sprintf(cmdbuf,"%s %s\r\n",storstr,filename);
    sendbuf(sockfd,cmdbuf,j);
    storfile(buf,size,port);

    readbuf(((void*)0),sockfd,srvbuf,SIZE);
    checkstatus(srvbuf);
}
